--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "type": "git",
     "url": "https://github.com/rawat9/ug-project"
   },
+  "keywords": [
+    "next",
+    "tailwind",
+    "typescript",
+    "react",
+    "dashboards"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,9 +22,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "1.0.2",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.0.0",
+    "geist": "^1.2.0",
     "next": "14.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "2.0.0",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@types/node": "20.10.0",
@@ -27,7 +40,7 @@
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "postcss": "8.4.31",
-    "prettier": "^3.1.0",
+    "prettier": "3.1.0",
     "tailwindcss": "3.3.0",
     "typescript": "5.3.2"
   }
