--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
     "@vercel/analytics": "1.1.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
-    "geist": "^1.2.0",
+    "geist": "1.2.0",
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
