--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "3.3.2",
     "@radix-ui/react-avatar": "1.0.4",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
+    "@supabase/ssr": "0.0.10",
+    "@supabase/supabase-js": "2.39.0",
     "@vercel/analytics": "1.1.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
@@ -32,8 +35,10 @@
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.49.0",
     "tailwind-merge": "2.0.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.10.0",
