--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.49.0",
+    "sonner": "1.2.4",
     "tailwind-merge": "2.0.0",
     "tailwindcss-animate": "1.0.7",
     "zod": "3.22.4"
