--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,19 +4,17 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
-  build:
+  check:
     name: Check
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         with:
-          version: 9
-
+          version: 8
       - run: echo "node_version=$(cat .github/nodejs.version)" >> $GITHUB_ENV
       - name: Use Node.js ${{ env.node_version }}
         uses: actions/setup-node@v3
