--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
   "tabWidth": 2,
   "semi": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
