--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@hookform/resolvers": "3.3.2",
     "@radix-ui/react-avatar": "1.0.4",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
     "@supabase/ssr": "0.0.10",
@@ -44,6 +45,7 @@
     "sonner": "1.2.4",
     "tailwind-merge": "2.0.0",
     "tailwindcss-animate": "1.0.7",
+    "use-debounce": "10.0.0",
     "zod": "3.22.4"
   },
   "devDependencies": {
@@ -62,6 +64,7 @@
     "postcss": "8.4.32",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "0.5.9",
+    "supabase": "1.123.4",
     "tailwindcss": "3.3.6",
     "typescript": "5.3.3"
   }
