--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -27,3 +27,7 @@ jobs:
         run: pnpm lint
       - name: Unit tests
         run: pnpm test
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
