--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   "dependencies": {
     "@hookform/resolvers": "3.3.2",
     "@radix-ui/react-avatar": "1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-tooltip": "1.0.7",
     "@supabase/ssr": "0.0.10",
     "@supabase/supabase-js": "2.39.0",
     "@vercel/analytics": "1.1.1",
