--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "supabase:update-types": "npx supabase gen types typescript --project-id $PROJECT_REF --schema public > types/database.ts "
   },
   "dependencies": {
+    "@codemirror/lang-sql": "6.5.5",
     "@hookform/resolvers": "3.3.2",
     "@radix-ui/react-avatar": "1.0.4",
     "@radix-ui/react-dialog": "1.0.5",
@@ -37,6 +38,7 @@
     "@radix-ui/react-tooltip": "1.0.7",
     "@supabase/ssr": "0.0.10",
     "@supabase/supabase-js": "2.39.0",
+    "@uiw/react-codemirror": "4.21.21",
     "@vercel/analytics": "1.1.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
