--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "test:watch": "jest --watch",
     "format": "prettier --write \"**/*.{ts,tsx}\"",
     "e2e:headless": "playwright test",
     "e2e:ui": "playwright test --ui",
