--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@playwright/test": "1.40.1",
     "@testing-library/jest-dom": "6.1.5",
     "@testing-library/react": "14.1.2",
+    "@testing-library/user-event": "14.5.2",
     "@types/jest": "29.5.11",
     "@types/node": "20.10.0",
     "@types/react": "18.2.39",
