--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "@radix-ui/react-tooltip": "1.0.7",
     "@supabase/ssr": "0.0.10",
     "@supabase/supabase-js": "2.39.0",
+    "@tanstack/react-table": "8.11.6",
     "@vercel/analytics": "1.1.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "cmdk": "0.2.0",
     "geist": "1.2.0",
+    "jotai": "2.6.1",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
