--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-tabs": "1.0.4",
     "@radix-ui/react-tooltip": "1.0.7",
     "@supabase/ssr": "0.0.10",
     "@supabase/supabase-js": "2.39.0",
@@ -45,6 +47,7 @@
     "clsx": "2.0.0",
     "geist": "1.2.0",
     "next": "14.0.4",
+    "papaparse": "5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
@@ -64,6 +67,7 @@
     "@testing-library/user-event": "14.5.2",
     "@types/jest": "29.5.11",
     "@types/node": "20.10.0",
+    "@types/papaparse": "5.3.14",
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.0.1",
