--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "geist": "1.2.0",
+    "jotai": "2.6.2",
     "next": "14.0.4",
     "papaparse": "5.4.1",
     "react": "18.2.0",
