--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
     "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-popover": "1.0.7",
+    "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-tabs": "1.0.4",
     "@radix-ui/react-tooltip": "1.0.7",
@@ -56,8 +56,9 @@
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
     "react-hook-form": "7.49.3",
+    "react-hot-toast": "2.4.1",
     "react-resizable-panels": "1.0.9",
-    "sonner": "1.2.4",
+    "sql-formatter": "15.1.2",
     "tailwind-merge": "2.2.1",
     "tailwindcss-animate": "1.0.7",
     "use-debounce": "10.0.0",
