--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "supabase:update-types": "npx supabase gen types typescript --project-id $PROJECT_REF --schema public > types/database.ts "
   },
   "dependencies": {
+    "@dnd-kit/core": "6.1.0",
+    "@dnd-kit/modifiers": "7.0.0",
+    "@headlessui/react": "1.7.18",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "3.3.4",
     "@monaco-editor/react": "4.6.0",
     "@radix-ui/react-avatar": "1.0.4",
@@ -44,12 +48,15 @@
     "@supabase/ssr": "0.0.10",
     "@supabase/supabase-js": "2.39.3",
     "@tanstack/react-table": "8.11.7",
+    "@tremor/react": "^3.13.4",
     "@vercel/analytics": "1.1.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "cmdk": "0.2.0",
+    "framer-motion": "11.0.3",
     "geist": "1.2.1",
     "jotai": "2.6.3",
+    "nanoid": "^5.0.5",
     "next": "14.1.0",
     "papaparse": "5.4.1",
     "react": "18.2.0",
@@ -57,6 +64,8 @@
     "react-dropzone": "14.2.3",
     "react-hook-form": "7.49.3",
     "react-hot-toast": "2.4.1",
+    "react-markdown": "^9.0.1",
+    "react-resizable": "3.0.5",
     "react-resizable-panels": "1.0.10",
     "sql-formatter": "15.1.2",
     "tailwind-merge": "2.2.1",
@@ -67,6 +76,8 @@
   },
   "devDependencies": {
     "@playwright/test": "1.40.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "6.3.0",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
@@ -75,6 +86,7 @@
     "@types/papaparse": "5.3.14",
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
+    "@types/react-resizable": "^3.0.7",
     "autoprefixer": "10.0.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
