--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
     "supabase:update-types": "npx supabase gen types typescript --project-id $PROJECT_REF --schema public > types/database.ts "
   },
   "dependencies": {
-    "@dnd-kit/core": "6.1.0",
-    "@dnd-kit/modifiers": "7.0.0",
     "@headlessui/react": "1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "3.3.4",
@@ -45,27 +43,27 @@
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-tabs": "1.0.4",
     "@radix-ui/react-tooltip": "1.0.7",
-    "@supabase/ssr": "0.0.10",
+    "@supabase/ssr": "0.1.0",
     "@supabase/supabase-js": "2.39.3",
     "@tanstack/react-table": "8.11.7",
-    "@tremor/react": "^3.13.4",
+    "@tremor/react": "3.13.4",
     "@vercel/analytics": "1.1.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "cmdk": "0.2.0",
     "framer-motion": "11.0.3",
     "geist": "1.2.1",
-    "jotai": "2.6.3",
-    "nanoid": "^5.0.5",
+    "jotai": "2.6.4",
+    "nanoid": "5.0.5",
     "next": "14.1.0",
     "papaparse": "5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
+    "react-grid-layout": "1.4.4",
     "react-hook-form": "7.49.3",
     "react-hot-toast": "2.4.1",
-    "react-markdown": "^9.0.1",
-    "react-resizable": "3.0.5",
+    "react-markdown": "9.0.1",
     "react-resizable-panels": "1.0.10",
     "sql-formatter": "15.1.2",
     "tailwind-merge": "2.2.1",
@@ -86,7 +84,7 @@
     "@types/papaparse": "5.3.14",
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
-    "@types/react-resizable": "^3.0.7",
+    "@types/react-grid-layout": "1.3.5",
     "autoprefixer": "10.0.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
