--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "preview": "next build && next start",
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
