--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@supabase/supabase-js": "2.39.3",
     "@tanstack/react-table": "8.11.7",
     "@vercel/analytics": "1.1.3",
+    "@vercel/speed-insights": "1.0.9",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "cmdk": "0.2.0",
