--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "supabase:update-types": "npx supabase gen types typescript --project-id $PROJECT_REF --schema public > types/database.ts "
   },
   "dependencies": {
+    "@aws-crypto/client-node": "4.0.0",
     "@headlessui/react": "1.7.18",
-    "@headlessui/tailwindcss": "^0.2.0",
+    "@headlessui/tailwindcss": "0.2.0",
     "@hookform/resolvers": "3.3.4",
     "@monaco-editor/react": "4.6.0",
     "@radix-ui/react-avatar": "1.0.4",
@@ -78,6 +79,7 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@playwright/test": "1.40.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
