--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "supabase:update-types": "npx supabase gen types typescript --project-id $PROJECT_REF --schema public > types/database.ts "
   },
   "dependencies": {
+    "@clerk/nextjs": "4.29.7",
     "@headlessui/react": "1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "3.3.4",
@@ -91,6 +92,7 @@
     "@types/react-dom": "18.2.17",
     "@types/react-grid-layout": "1.3.5",
     "autoprefixer": "10.0.1",
+    "env-cmd": "^10.1.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
     "jest": "29.7.0",
