--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "next start",
     "preview": "next build && next start",
     "lint": "next lint",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "format": "prettier --write \"**/*.{ts,tsx}\"",
     "e2e:headless": "playwright test",
