--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "4.29.7",
+    "@codemirror/autocomplete": "6.12.0",
+    "@codemirror/lang-sql": "6.5.5",
     "@headlessui/react": "1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "3.3.4",
@@ -52,6 +54,7 @@
     "@supabase/supabase-js": "2.39.3",
     "@tanstack/react-table": "8.11.7",
     "@tremor/react": "3.13.4",
+    "@uiw/react-codemirror": "4.21.24",
     "@vercel/analytics": "1.1.3",
     "@vercel/speed-insights": "1.0.9",
     "class-variance-authority": "0.7.0",
@@ -71,7 +74,7 @@
     "react-hot-toast": "2.4.1",
     "react-markdown": "9.0.1",
     "react-resizable-panels": "2.0.3",
-    "sql-formatter": "15.1.2",
+    "sql-formatter": "15.2.0",
     "tailwind-merge": "2.2.1",
     "tailwindcss-animate": "1.0.7",
     "use-debounce": "10.0.0",
