--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "3.3.4",
     "@monaco-editor/react": "4.6.0",
+    "@radix-ui/react-accordion": "1.1.2",
     "@radix-ui/react-avatar": "1.0.4",
     "@radix-ui/react-checkbox": "1.0.4",
     "@radix-ui/react-dialog": "1.0.5",
