--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@tanstack/react-table": "8.11.7",
     "@tremor/react": "3.13.4",
     "@uiw/react-codemirror": "4.21.24",
+    "@uiw/react-json-view": "2.0.0-alpha.18",
     "@vercel/analytics": "1.1.3",
     "@vercel/speed-insights": "1.0.9",
     "class-variance-authority": "0.7.0",
