add Mustache for dynamic vars; minor ui changes

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "framer-motion": "11.0.3",
     "geist": "1.2.1",
     "jotai": "2.6.4",
+    "mustache": "4.2.0",
     "nanoid": "5.0.5",
     "next": "14.1.0",
     "papaparse": "5.4.1",
@@ -75,7 +76,7 @@
     "react-hook-form": "7.49.3",
     "react-hot-toast": "2.4.1",
     "react-markdown": "9.0.1",
-    "react-resizable-panels": "2.0.3",
+    "react-resizable-panels": "2.0.13",
     "sql-formatter": "15.2.0",
     "tailwind-merge": "2.2.1",
     "tailwindcss-animate": "1.0.7",
@@ -91,6 +92,7 @@
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
     "@types/jest": "29.5.11",
+    "@types/mustache": "^4.2.5",
     "@types/node": "20.11.6",
     "@types/papaparse": "5.3.14",
     "@types/react": "18.2.39",
