--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@radix-ui/react-tooltip": "1.0.7",
     "@supabase/ssr": "0.1.0",
     "@supabase/supabase-js": "2.39.3",
+    "@tanstack/react-query": "5.28.2",
     "@tanstack/react-table": "8.11.7",
     "@tremor/react": "3.13.4",
     "@uiw/react-codemirror": "4.21.24",
@@ -88,6 +89,7 @@
     "@playwright/test": "1.40.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-query-devtools": "5.28.2",
     "@testing-library/jest-dom": "6.3.0",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
