--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "supabase:update-types": "npx supabase gen types typescript --project-id $PROJECT_REF --schema public > types/database.ts "
   },
   "dependencies": {
-    "@clerk/nextjs": "4.29.7",
+    "@clerk/nextjs": "4.29.9",
     "@codemirror/autocomplete": "6.12.0",
     "@codemirror/lang-sql": "6.5.5",
+    "@dnd-kit/core": "^6.1.0",
     "@headlessui/react": "1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "3.3.4",
-    "@monaco-editor/react": "4.6.0",
     "@radix-ui/react-accordion": "1.1.2",
     "@radix-ui/react-avatar": "1.0.4",
     "@radix-ui/react-checkbox": "1.0.4",
@@ -53,23 +53,23 @@
     "@radix-ui/react-toggle-group": "1.0.4",
     "@radix-ui/react-tooltip": "1.0.7",
     "@supabase/ssr": "0.1.0",
-    "@supabase/supabase-js": "2.39.3",
-    "@tanstack/react-table": "8.13.0",
-    "@tanstack/react-query": "5.28.2",
-    "@tremor/react": "3.13.4",
+    "@supabase/supabase-js": "2.39.8",
+    "@tanstack/react-query": "5.28.6",
+    "@tanstack/react-table": "8.15.0",
+    "@tremor/react": "3.14.1",
     "@uiw/react-codemirror": "4.21.24",
-    "@uiw/react-json-view": "2.0.0-alpha.18",
+    "@uiw/react-json-view": "2.0.0-alpha.20",
     "@vercel/analytics": "1.1.3",
     "@vercel/speed-insights": "1.0.9",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "cmdk": "0.2.0",
-    "framer-motion": "11.0.3",
-    "geist": "1.2.1",
-    "jotai": "2.6.4",
-    "mustache": "4.2.0",
+    "framer-motion": "11.0.20",
+    "geist": "1.2.2",
+    "jotai": "2.7.1",
+    "lodash": "4.17.21",
     "nanoid": "5.0.5",
-    "next": "14.1.0",
+    "next": "14.1.4",
     "papaparse": "5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -79,7 +79,7 @@
     "react-hot-toast": "2.4.1",
     "react-markdown": "9.0.1",
     "react-resizable-panels": "2.0.13",
-    "sql-formatter": "15.2.0",
+    "sql-formatter": "15.3.0",
     "tailwind-merge": "2.2.1",
     "tailwindcss-animate": "1.0.7",
     "use-debounce": "10.0.0",
@@ -87,15 +87,15 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
-    "@playwright/test": "1.40.1",
+    "@playwright/test": "1.42.1",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-query-devtools": "5.28.2",
+    "@tailwindcss/typography": "0.5.10",
+    "@tanstack/react-query-devtools": "5.28.6",
     "@testing-library/jest-dom": "6.3.0",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
     "@types/jest": "29.5.11",
-    "@types/mustache": "^4.2.5",
+    "@types/lodash": "4.17.0",
     "@types/node": "20.11.6",
     "@types/papaparse": "5.3.14",
     "@types/react": "18.2.39",
@@ -103,14 +103,14 @@
     "@types/react-grid-layout": "1.3.5",
     "autoprefixer": "10.0.1",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.1.4",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "postcss": "8.4.32",
-    "prettier": "3.2.4",
+    "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
-    "supabase": "1.136.2",
+    "supabase": "1.150.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.4.3"
   }
 }
