--- a/package.json
+++ b/package.json
@@ -8,13 +8,7 @@
     "type": "git",
     "url": "https://github.com/rawat9/ug-project"
   },
-  "keywords": [
-    "next",
-    "tailwind",
-    "typescript",
-    "react",
-    "dashboards"
-  ],
+  "keywords": ["next", "tailwind", "typescript", "react", "dashboards"],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -94,7 +88,6 @@
     "@testing-library/jest-dom": "6.3.0",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
-    "@types/jest": "29.5.11",
     "@types/lodash": "4.17.0",
     "@types/node": "20.11.6",
     "@types/papaparse": "5.3.14",
@@ -104,8 +97,6 @@
     "autoprefixer": "10.0.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.4",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
     "postcss": "8.4.32",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
