--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "type": "git",
     "url": "https://github.com/rawat9/ug-project"
   },
-  "keywords": ["next", "tailwind", "typescript", "react", "dashboards"],
+  "keywords": [
+    "next",
+    "tailwind",
+    "typescript",
+    "react",
+    "dashboards"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -94,6 +100,7 @@
     "autoprefixer": "10.0.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.4",
+    "mini-svg-data-uri": "1.4.4",
     "postcss": "8.4.32",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.11",
