--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "type": "git",
     "url": "https://github.com/rawat9/ug-project"
   },
-  "keywords": ["next", "tailwind", "typescript", "react", "dashboards"],
+  "keywords": [
+    "next",
+    "tailwind",
+    "typescript",
+    "react",
+    "dashboards"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
