--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@headlessui/tailwindcss": "0.2.0",
     "@hookform/resolvers": "3.3.4",
     "@radix-ui/react-accordion": "1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "1.0.4",
     "@radix-ui/react-checkbox": "1.0.4",
     "@radix-ui/react-dialog": "1.0.5",
@@ -79,6 +80,7 @@
     "react-hot-toast": "2.4.1",
     "react-markdown": "9.0.1",
     "react-resizable-panels": "2.0.16",
+    "remark-gfm": "^4.0.0",
     "sql-formatter": "15.3.0",
     "tailwind-merge": "2.2.2",
     "tailwindcss-animate": "1.0.7",
