--- a/package.json
+++ b/package.json
@@ -53,62 +53,62 @@
     "@radix-ui/react-toggle": "1.0.3",
     "@radix-ui/react-toggle-group": "1.0.4",
     "@radix-ui/react-tooltip": "1.0.7",
-    "@supabase/ssr": "0.1.0",
-    "@supabase/supabase-js": "2.39.8",
-    "@tanstack/react-query": "5.28.2",
-    "@tanstack/react-table": "8.15.0",
-    "@tremor/react": "3.15.0",
+    "@supabase/ssr": "0.5.1",
+    "@supabase/supabase-js": "2.45.3",
+    "@tanstack/react-query": "5.55.2",
+    "@tanstack/react-table": "8.20.5",
+    "@tremor/react": "3.18.1",
     "@uiw/react-codemirror": "4.21.25",
     "@uiw/react-json-view": "2.0.0-alpha.21",
-    "@vercel/analytics": "1.2.2",
-    "@vercel/speed-insights": "1.0.10",
+    "@vercel/analytics": "1.3.1",
+    "@vercel/speed-insights": "1.0.12",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "cmdk": "0.2.0",
     "framer-motion": "11.0.24",
-    "geist": "1.3.0",
-    "jotai": "2.7.2",
+    "geist": "1.3.1",
+    "jotai": "2.9.3",
     "lodash": "4.17.21",
     "nanoid": "5.0.5",
-    "next": "14.1.4",
+    "next": "14.2.8",
     "papaparse": "5.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-dropzone": "14.2.3",
     "react-grid-layout": "1.4.4",
     "react-hook-form": "7.51.2",
     "react-hot-toast": "2.4.1",
     "react-markdown": "9.0.1",
     "react-resizable-panels": "2.0.16",
-    "remark-gfm": "^4.0.0",
-    "sql-formatter": "15.3.0",
-    "tailwind-merge": "2.2.2",
+    "remark-gfm": "4.0.0",
+    "sql-formatter": "15.4.2",
+    "tailwind-merge": "2.5.2",
     "tailwindcss-animate": "1.0.7",
-    "use-debounce": "10.0.0",
+    "use-debounce": "10.0.3",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz",
-    "zod": "3.22.4"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@hookform/devtools": "4.3.1",
     "@playwright/test": "1.42.1",
-    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/forms": "0.5.9",
     "@tailwindcss/typography": "0.5.10",
-    "@tanstack/react-query-devtools": "5.28.2",
+    "@tanstack/react-query-devtools": "5.55.2",
     "@types/lodash": "4.17.0",
     "@types/node": "20.11.6",
     "@types/papaparse": "5.3.14",
-    "@types/react": "18.2.39",
-    "@types/react-dom": "18.2.17",
+    "@types/react": "18.3.5",
+    "@types/react-dom": "18.3.0",
     "@types/react-grid-layout": "1.3.5",
     "autoprefixer": "10.0.1",
-    "eslint": "8.56.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
     "mini-svg-data-uri": "1.4.4",
     "postcss": "8.4.32",
-    "prettier": "3.2.5",
+    "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.5.11",
     "supabase": "1.150.0",
-    "tailwindcss": "3.4.3",
-    "typescript": "5.4.3"
+    "tailwindcss": "3.4.10",
+    "typescript": "5.5.4"
   }
 }
